# opengl-course

./: CMakeLists.txt  Makefile
Shaders/: shader.frag  shader.vert
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  camera.cxx  camera.h  camera.txt
src/glwindow/: CMakeLists.txt  glwindow.cxx  glwindow.h
src/mesh/: CMakeLists.txt  mesh.cxx  mesh.h
src/shader/: CMakeLists.txt  shader.cxx  shader.h
